--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.8.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "3.2.5",
     "js-yaml": "^4.1.0",
-    "prettier": "2.7.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^4.7.4"
   }
 }
