--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "eslint": "^8.56.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.8.0",
-    "jest": "^29.7.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "3.2.5",
+    "prettier": "^3.2.5",
+    "jest": "^29.7.0",
     "js-yaml": "^4.1.0",
     "ts-jest": "^29.1.2",
     "typescript": "^4.7.4"
